Academatica.Api/k8s/auth-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authnpservice-svc
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 80
      targetPort: 80
