Academatica.Api/k8s/course-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courseservice
  template:
    metadata:
      labels:
        app: courseservice
    spec:
      containers:
        - name: courseservice
          image: nicnierobie/academatica-users-svc:latest
---
apiVersion: v1
kind: Service
metadata:
  name: course-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: courseservice
  ports:
  - name: courseservice
    protocol: TCP
    port: 80
    targetPort: 80
