Academatica.Api/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academaticaweb
                port:
                  number: 80
          - path: /connect
            pathType: Prefix
            backend:
              service:
                name: academaticaapiauth
                port:
                  number: 80
          - path: /.well-known
            pathType: Prefix
            backend:
              service:
                name: academaticaapiauth
                port:
                  number: 80
          - path: /api/course
            pathType: Prefix
            backend:
              service:
                name: academaticaapicourse
                port:
                  number: 80
          - path: /api/leaderboard
            pathType: Prefix
            backend:
              service:
                name: academaticaapileaderboards
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: academaticaapiusers
                port:
                  number: 80
